--- a/404.html
+++ b/404.html
@@ -7,17 +7,17 @@
 <meta name=keywords content>
 <meta name=description content="ExampleSite description">
 <meta name=author content="MindBreaker3310">
-<link rel=canonical href=https://examplesite.com/404.html>
+<link rel=canonical href=https://mindbreaker3310.github.io/404.html>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
 <link rel=preload href=#ZgotmplZ as=image>
-<link rel=icon href=https://examplesite.com/%3Clink%20/%20abs%20url%3E>
-<link rel=icon type=image/png sizes=16x16 href=https://examplesite.com/%3Clink%20/%20abs%20url%3E>
-<link rel=icon type=image/png sizes=32x32 href=https://examplesite.com/%3Clink%20/%20abs%20url%3E>
-<link rel=apple-touch-icon href=https://examplesite.com/%3Clink%20/%20abs%20url%3E>
-<link rel=mask-icon href=https://examplesite.com/%3Clink%20/%20abs%20url%3E>
+<link rel=icon href=https://mindbreaker3310.github.io/%3Clink%20/%20abs%20url%3E>
+<link rel=icon type=image/png sizes=16x16 href=https://mindbreaker3310.github.io/%3Clink%20/%20abs%20url%3E>
+<link rel=icon type=image/png sizes=32x32 href=https://mindbreaker3310.github.io/%3Clink%20/%20abs%20url%3E>
+<link rel=apple-touch-icon href=https://mindbreaker3310.github.io/%3Clink%20/%20abs%20url%3E>
+<link rel=mask-icon href=https://mindbreaker3310.github.io/%3Clink%20/%20abs%20url%3E>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
@@ -27,9 +27,9 @@
 </noscript><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="ExampleSite description">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://examplesite.com/404.html"><meta property="og:image" content="https://examplesite.com/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="ExampleSite">
+<meta property="og:url" content="https://mindbreaker3310.github.io/404.html"><meta property="og:image" content="https://mindbreaker3310.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="ExampleSite">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://examplesite.com/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
+<meta name=twitter:image content="https://mindbreaker3310.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="ExampleSite description">
 </head>
@@ -38,7 +38,7 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://examplesite.com/ accesskey=h title="Home (Alt + H)">
+<a href=https://mindbreaker3310.github.io/ accesskey=h title="Home (Alt + H)">
 <img src=#ZgotmplZ alt=logo aria-label=logo height=35>Home</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
@@ -47,12 +47,12 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://examplesite.com/posts/ title=文章列表>
+<a href=https://mindbreaker3310.github.io/posts/ title=文章列表>
 <span>文章列表</span>
 </a>
 </li>
 <li>
-<a href=https://examplesite.com/tags/ title=tags>
+<a href=https://mindbreaker3310.github.io/tags/ title=tags>
 <span>tags</span>
 </a>
 </li>
@@ -68,7 +68,7 @@
 <div class=not-found>404</div>
 </main>
 <footer class=footer>
-<span>&copy; 2021 <a href=https://examplesite.com/>ExampleSite</a></span>
+<span>&copy; 2021 <a href=https://mindbreaker3310.github.io/>ExampleSite</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
